update(page): update styles

--- a/src/style.less
+++ b/src/style.less
@@ -19,7 +19,7 @@ html {
 }
 
 a {
-text-decoration: none;
+  text-decoration: none;
 
   &:hover {
     text-decoration: none;
@@ -56,15 +56,11 @@ body {
     a {
       color: #d4d4d4 !important;
     }
-
-    #topbar {
-      // background-color: #252526;
-      // border-bottom: none !important;
-    }
-
-    .main-wrap {
-    }
   }
+}
+
+.code, .mono {
+  font-family: "JetBrains Mono", monospace !important;
 }
 
 :deep(.ant-btn-primary) {
