reformat: run prettier

--- a/src/style.less
+++ b/src/style.less
@@ -35,7 +35,9 @@ a {
 }
 
 body {
-  transition: background-color 0.5s, color 0.5s;
+  transition:
+    background-color 0.5s,
+    color 0.5s;
   background-color: #131111 !important;
   color: #d4d4d4 !important;
 
@@ -59,7 +61,8 @@ body {
   }
 }
 
-.code, .mono {
+.code,
+.mono {
   font-family: "JetBrains Mono", monospace !important;
 }
 
